# illumina-utils

./: .gitignore  .venv  CHANGELOG.md  COPYING  MANIFEST.in  README.md  VERSION  compute-qual-dicts-from-fastq.py  config.ini  fastalib.py  fastq.py  fastq2fasta.py  fastqlib.py  helperfunctions.py  merge-illumina-pairs.py  merge.py  requirements.txt  runconfig.py  runconfiguration.py  sample_config.ini  setup.cfg  setup.py  trim.py  visualize-plot-dicts.py  visualize-qual-dicts.py
IlluminaUtils/: VERSION  __init__.py  _version.py  rapidmerge.py
examples/: demultiplexing.sh  info.sh  interleave_deinterleave.sh  v6-complete-overlap.sh
sample-files/: general-config-SAMPLE.ini  hiseq_complete_overlap_config-SAMPLE.ini  hiseq_complete_overlap_pair_1.fa  hiseq_complete_overlap_pair_2.fa  hiseq_partial_overlap_pair_1.fa  hiseq_partial_overlap_pair_2.fa
scripts/: analyze-illumina-quality-bokulich  analyze-illumina-quality-minoche  analyze-illumina-v6-overlaps  compute-qual-dicts-from-fastq  fastq2fasta  filter-merged-reads  iu-analyze-v6-complete-overlaps  iu-compute-qual-dicts-from-fastq  iu-deinterleave-fastq  iu-demultiplex  iu-fasta-to-fastq  iu-fastq-to-fasta  iu-filter-merged-reads  iu-filter-quality-bokulich  iu-filter-quality-minoche  iu-gen-configs  iu-gen-matching-fastq-files  iu-interleave-fastq  iu-merge-pairs  iu-remove-ids-from-fastq  iu-subsample-fastq  iu-trim-V6-primers  iu-trim-fastq  iu-visualize-plot-dicts  iu-visualize-qual-dicts  merge-illumina-pairs  merge-illumina-pairs-v2  nat-met-2276  remove-ids-from-fastq  trim  trim-illumina-pairs  (+3 more)
(+19 files in other folders)
