[metadata]
name = illumina-utils
version = file: IlluminaUtils/VERSION
description = A library and collection of scripts to work with Illumina paired-end data (for CASAVA 1.8+).
author = Illumina Utils Authors
author_email = a.murat.eren@gmail.com
license = GPLv3+
url = https://github.com/meren/illumina-utils
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.0
install_requires =
    Matplotlib
    python-Levenshtein
    numpy
include_package_data = True

[options.package_data]
IlluminaUtils =
    VERSION
    examples
